# dining_philosophers

./: CMakeLists.txt  README.md  analyser.py  logPhil0.txt  logPhil1.txt  logPhil2.txt  logPhil3.txt  logPhil4.txt  logPhil7.txt  logPhil8.txt  main_theProblem_noMutex.c  philosofer.puml  philosopher.puml  programando_onlinely.c
analyser_python/: analyser.py
include/: colors.h
problem_threadless/: CMakeLists.txt  problem_threadless.c
problem_with_mutex/: CMakeLists.txt  problem_with_mutex.c
problem_with_mutex/logs/: logPhil5.txt  logPhil6.txt
problem_with_mutex_bad/: CMakeLists.txt  problem_with_mutex_bad.c  problem_with_sempahore_bad.c
problem_with_semaphore_bad/: CMakeLists.txt  problem_with_sempahore_bad.c
problem_without_mutex/: CMakeLists.txt  problem_without_mutex.c
